--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,17 @@ body {
 	margin: 0;
 }
 #background {
-	background: url(../images/bg-pattern.jpg) repeat-x center top;
+	background: url(../images/bg-pattern.jpg) repeat-x 0 0;
 	min-height: 1318px;
 }
 #page {
 	width: 960px;
 	margin: 0 auto;
+}
+ol,
+ul {
+	list-style: none;
+	padding:0;
 }
 img {
 	border: 0;
@@ -18,52 +23,62 @@ img {
 /*------------------------------ Sprites ------------------------------*/
 
 #contents div.box, #contents div.box > div, #contents div.body {
-	background-image: url(../images/content-box.png);
-	background-repeat: no-repeat;
+	background:#fff; margin-top:15px;
 }
 #main div.box, #main div.box > div, #main div.box > div > div {
-	background-image: url(../images/bg-box.png);
-	background-repeat: no-repeat;
+	background:#fff;
 }
-/*------------------------------ HEADER ------------------------------*/
+/*------------------------------ HEADER ------------------------------
+	margin-bottom: 20px;
+	padding-top: 20px;*/
 #header {
-	margin-bottom: 20px;
-	padding-top: 20px;
+	height:200px;
+	position:relative;
+	top:0;
+	margin-bottom:24px;
 }
-/** Logo **/
+/** Logo    margin-bottom: 20px;
+    margin-left: 49px;**/
 #logo {
-	float: left;
-	margin-bottom: 20px;
-	margin-left: 49px;
+	position:absolute;
+	left:0;
+	height:154px;
+	top:30px;
 }
 /** Navigation **/
 #navigation {
-	background:#b8205b;
+	position:absolute;
+	bottom:0;
+	left:0;
+	background:#F56E8D;
+	border-bottom: 1px solid #BF7589;
+    border-top: 1px solid #EEBDCB;
 	clear: both;
 	height: 50px;
-	width: 860px;
+	width: 960px;
 	margin: 0 auto;
-	padding: 1px;
+	padding: 0;
 }
 #navigation ul {
 	display: inline-block;
-	width: 860px;
+	width: 960px;
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 #navigation li {
+	background:url(../images/separator.png) no-repeat center right;
+	background-size:auto 100%;
 	float: left;
-	background-position: 0 -118px;
-	background-repeat: no-repeat;
-	height: 49px;
-	width: 122px;
+	height: 50px;
+	width: 136px;
 	margin: 0;
 	padding-left: 1px;
 	text-align: center;
 }
+
+#navigation li:last-child{ background:none;}
 #navigation li:first-child {
-	background: none;
 	margin-left: 0;
 	padding-left: 0;
 }
@@ -76,8 +91,8 @@ img {
 	text-transform: uppercase;
 }
 #navigation li a:hover {
-	background-position: 0 -59px;
-	color: #6d6157;
+	border-bottom:3px solid #621D34;
+	color: #621D34;
 }
 #navigation li.selected a {
 	background-position: 0 0;
@@ -86,8 +101,9 @@ img {
 /*------------------------------ CONTENTS ------------------------------*/
 #contents {
 	display: inline-block;
-	width: 865px;
-	padding: 0 47px;
+ background: #ffffff;
+	width: 960px;
+	padding: 0;
 }
 #contents h1 {
 	color: #df628c;
@@ -120,8 +136,8 @@ img {
 #contents p a {
 	color: #621d34;
 }
-#contents p a:hover, #news div.sidebar ul li a:hover {
-	color: #917157;
+#contents p a:hover, #new div.sidebar ul li a:hover {
+	color: #621D34;
 }
 /** box-shadow **/
 #contents div.box {
@@ -131,21 +147,19 @@ img {
 	padding: 0 0 6px;
 }
 #contents div.box > div {
-	background-position: -1745px top;
 	padding: 6px 0 0;
 }
 #contents div.body {
-	background-position: -871px top;
 	background-repeat: repeat-y;
 	min-height: 980px;
-	padding: 30px 40px 0;
+	padding: 20px;
 }
 /** Adbox **/
 #adbox {
-	background: url(../images/bg-adbox.png) no-repeat left top;
-	width: 852px;
-	margin: 0 auto;
-	padding: 4px 5px 18px;
+	background-color:#efefef;
+	padding:15px 7px;
+	width: 946px;
+	margin: 10px auto;
 }
 #adbox p {
 	font-size: 16px;
@@ -166,7 +180,7 @@ hr {
 #main {
 	float: left;
 	min-height: 100px;
-	width: 566px;
+	width: 625px;
 }
 #main div.box {
 	background-position: left bottom;
@@ -222,7 +236,7 @@ hr {
 #sidebar {
 	float: right;
 	height: auto;
-	width: 285px;
+	width: 320px;
 }
 #sidebar div.section {
 	height: 144px;
@@ -256,7 +270,7 @@ hr {
 	text-decoration: none;
 }
 #testimonials p span a:hover {
-	color: #2c9688;
+	color: #621D34;
 }
 /** Shops, Muffins galerys **/
 #Shops, #Muffins, #sites {
@@ -332,42 +346,42 @@ hr {
 	border: 1px solid #2c9688;
 	margin-left: 15px;
 }
-/** News **/
-#news {
+/** new **/
+#new {
 	display: inline-block;
 	width: 784px;
 }
-#news > div {
+#new > div {
 	width: 560px;
 	border-right: 1px solid #bbbbbb;
 	padding-right: 35px;
 }
-#news > div img {
+#new > div img {
 	border: 1px solid #2c9688;
 	margin-bottom: 20px;
 }
-#news > div h2 {
+#new > div h2 {
 	margin-bottom: 12px;
 }
-#news > div span {
+#new > div span {
 	color: #621d34;
 	display: block;
 	font: 15px/24px "Times New Roman", Times, serif;
 	margin-bottom: 30px;
 }
-#news > div span.author {
+#new > div span.author {
 	color: #2c9688;
 	display: block;
 	font-size: 14px;
 	margin-bottom: 20px;
 }
-#news div.sidebar {
+#new div.sidebar {
 	float: right;
 	width: 160px;
 	border: 0;
 	padding: 0;
 }
-#news div.sidebar h3 {
+#new div.sidebar h3 {
 	color: #2c9688;
 	font-size: 20px;
 	font-weight: normal;
@@ -376,32 +390,32 @@ hr {
 	padding-top: 18px;
 	text-transform: uppercase;
 }
-#news div.sidebar h3:first-child {
+#new div.sidebar h3:first-child {
 	border: 0;
 	padding-top: 0px;
 }
-#news div.sidebar ul {
+#new div.sidebar ul {
 	list-style: none;
 	margin: 0 0 8px;
 	padding: 0;
 }
-#news div.sidebar ul li a {
+#new div.sidebar ul li a {
 	color: #621d34;
 	display: inline-block;
 	font-size: 15px;
 	margin-bottom: 6px;
 	text-decoration: none;
 }
-#news ul li {
+#new ul li {
 	margin-bottom: 12px;
 }
-/** Contact **/
+/** Contact 
 #contact form {
 	float: right;
 	color: #621d34;
 	height: 320px;
 	width: 420px;
-	border: 1px solid #621d34;
+	border: none;
 	padding: 19px 19px 6px;
 }
 #contact form table {
@@ -419,6 +433,7 @@ hr {
 #contact table td.txtarea {
 	vertical-align: top;
 }
+
 #contact form input {
 	height: 17px;
 	line-height: 17px;
@@ -446,7 +461,7 @@ hr {
 }
 #contact input.btn:hover {
 	background-position: 0 0;
-}
+}**/
 #contact p span {
 	display: block;
 	text-transform: uppercase;
@@ -460,14 +475,14 @@ hr {
 	padding-top: 42px;
 	text-transform: uppercase;
 }
-#footer > div {    background-color: #F56E8D;
+#footer > div {      background-color: #F56E8D;
     border-bottom: 1px solid #BF7589;
     border-top: 1px solid #EEBDCB;
-	height: 48px;
-	width: 822px;
-	margin: 0 auto;
-	padding: 0 20px;
-	text-align: right;
+    height: 48px;
+    margin: 0 auto;
+    padding: 0 10px;
+    text-align: right;
+    width: 940px;
 }
 #footer ul.navigation {
 	float: left;
@@ -481,7 +496,7 @@ hr {
 	margin-right: 10px;
 }
 #footer ul.navigation li a {
-	color: #594334;
+	color: #fff;
 	padding: 0 5px;
 	text-decoration: none;
 }
@@ -490,10 +505,10 @@ hr {
 	padding-left: 0;
 }
 #footer ul.navigation li a:hover {
-	color: #eee7c3;
+	color: #621D34;
 }
 #footer ul.navigation li.active a {
-	color: #fff;
+	color: #ad1d51;
 }
 #footer p {
 	margin: 0;
@@ -540,24 +555,79 @@ hr {
 	background-position: 0 -197px;
 }
 /* Form */
-#form{ float:right; margin-right:50px;}
-form label{ color:#621D34;}
-form input{
+fieldset{ border:none; padding:0;}
+
+form label{ color:#621D34; display:block;}
+
+form#Kontaktformular1{ float:right; margin-right:30px;    width: 350px;}
+
+form#register{ margin:20px auto;width: 350px;}
+
+#form{ position:absolute;
+right:0;
+top:80px;}
+
+#header form label{ display:none;}
+form input, form textarea{
 	background: #fff;
 	border:1px solid #DF628C;
-	padding:7px 4px;
-	width:250px;
-	border-radius: 10px;
-	text-indent:10px;
+	padding:4px 4px;
+	width:340px;
+	border-radius: 6px;
+	color:#621D34;
 }
+#header form input{ width:142px;}
 form input#submit,
 form input#reg{
-	background:#DF628C;
+	background:#F56E8D;
+	border-radius:0 !important;
 	border:none;
-	width:120px;
+	width:70px;
 	margin:10px 0;
-	color:#fff;}
-form input#reg{
+	color:#fff;
+	height:25px;
+	font-size:12px !important;
 	float:right;
-	}
-div#navigation ul li.active{ background:#DF628C; color:#fff;}
+	text-align:center;
+	padding:0;}
+	form input#submit{
+		margin-right:10px;}
+
+div#navigation ul li.active a{color: #ad1d51;
+	background:url(../images/separator.png) no-repeat center right;
+	background-size:auto 100%;}
+div#navigation ul li.active a:last-child{ background:none;}
+button#submit{ display:block;
+	background:#F56E8D; border:none; color:#fff; width:152px}
+#contact input:hover, #contact textarea:hover {
+	background:#fce4ea}
+form input#submit:hover,
+form input#reg:hover,
+button#submit:hover{ background:#AD1D51; color:#fff;}
+div.reg{
+background: #fff;  
+}
+div#slideshow{
+  margin-bottom: 20px;
+}
+
+form.default label.error:before {
+    border-color: -moz-use-text-color rgba(0, 0, 0, 0) rgba(255, 0, 0, 0.7);
+    border-style: none solid solid;
+    border-width: 0 7px 10px;
+    content: "";
+    height: 0;
+    position: absolute;
+    right: 10px;
+    top: -10px;
+    width: 0;
+}
+form.default label.error {
+    background: none repeat scroll 0 0 rgba(255, 0, 0, 0.7);
+    color: #FFFFFF;
+    margin-bottom: 2%;
+    padding: 5px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+}
